# Process this file with autoconf to produce a configure script.


AC_INIT(cinfo.c)
AM_INIT_AUTOMAKE(cinfo, 0.2)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([errno.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

AC_SEARCH_LIBS(getopt_long, [gnugetopt])


# Checks for library functions.
#AC_FUNC_STAT
AC_CHECK_FUNCS([strerror mincore])
AC_OUTPUT([Makefile])
